<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="13dp"
    android:layoutDirection="ltr"
    android:orientation="horizontal"
    android:textDirection="ltr"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:background="@drawable/unselected_tagbg"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/tag_all"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingHorizontal="17dp"/>

        <TextView
            android:id="@+id/tab_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:background="@drawable/unselected_tagbg"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/tag_cars"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingHorizontal="17dp"/>


        <TextView
            android:id="@+id/tab_nature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:background="@drawable/unselected_tagbg"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/tag_nature"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingHorizontal="17dp"/>


        <TextView
            android:id="@+id/tab_scifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:background="@drawable/unselected_tagbg"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/tag_scifi"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingHorizontal="17dp"/>


        <TextView
            android:id="@+id/tab_architectural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:background="@drawable/unselected_tagbg"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/tag_architectural"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingHorizontal="17dp"/>

        <TextView
            android:id="@+id/tab_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/unselected_tagbg"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/tag_others"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingHorizontal="17dp"
            android:layout_marginEnd="13dp"/>

    </LinearLayout>

</HorizontalScrollView>


