<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layoutDirection="ltr"
    android:textDirection="ltr">


    <com.ortiz.touchview.TouchImageView
        android:id="@+id/display_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_description_display_wallpaper"
        />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/displayAdViewTop"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:visibility="visible"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id1"
        ads:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/displayAdViewBottom"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:visibility="visible"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id2"
        ads:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/display_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/content_description_back"
        android:focusable="true"
        android:padding="5dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayAdViewTop"
        app:layout_constraintVertical_bias="0" />

    <ImageView
        android:id="@+id/add_to_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/display_item_background"
        android:contentDescription="@string/content_description_add_favorite"
        android:padding="6dp"
        android:src="@drawable/favorite_unselected"
        app:layout_constraintBottom_toTopOf="@id/options_menu"
        app:layout_constraintEnd_toEndOf="@id/options_menu"
        app:layout_constraintStart_toStartOf="@id/options_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <ImageView
        android:id="@+id/options_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/display_item_background"
        android:contentDescription="@string/content_description_menu"
        android:padding="6dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toTopOf="@id/displayAdViewBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />


</androidx.constraintlayout.widget.ConstraintLayout>