<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layoutDirection="ltr"
    android:textDirection="ltr">


    <ImageView
        android:id="@+id/image1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.65"
        android:src="@drawable/no_internet_connection"
        app:layout_constraintVertical_bias="0"
        android:contentDescription="@string/content_description_no_internet"
        />


    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:text="@string/whoops"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/image1"
        app:layout_constraintEnd_toEndOf="@id/image1"
        app:layout_constraintTop_toBottomOf="@id/title1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/problem_on_your_network"
        android:gravity="center"
        android:layout_marginTop="7dp"
        app:layout_constraintVertical_bias="0"/>


    <TextView
        android:id="@+id/try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/try_again_buttonbg"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/try_again"
        android:layout_marginTop="19dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="45dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginBottom="7dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>