<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:layoutDirection="ltr"
    android:textDirection="ltr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wallpaper_options_menu_background"
        android:orientation="vertical"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="-7dp"
            android:background="@drawable/menu_window_itemsbg"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/menu_download" />


        <TextView
            android:id="@+id/set_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="-7dp"
            android:background="@drawable/menu_window_itemsbg"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/set_wallpaper"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/menu_set_wallpaper" />

        <TextView
            android:id="@+id/set_lockscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="-7dp"
            android:background="@drawable/menu_window_itemsbg"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/set_lockscreen"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/menu_set_lockscreen" />

        <TextView
            android:id="@+id/set_both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="-7dp"
            android:background="@drawable/menu_window_itemsbg"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/set_both"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/menu_set_both" />


        <TextView
            android:id="@+id/close_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="-7dp"
            android:background="@drawable/menu_window_itemsbg"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/menu_close"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
