<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layoutDirection="ltr"
    android:textDirection="ltr">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/favorite_back"
        app:layout_constraintBottom_toBottomOf="@id/favorite_back"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/favorites"
        />

    <ImageView
        android:id="@+id/favorite_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/favoritesRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0"
        android:src="@drawable/back_buttond"
        android:contentDescription="@string/content_description_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintWidth_percent="0.95"
        android:visibility="invisible"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_favorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/favoritesRecyclerView"
        app:layout_constraintBottom_toBottomOf="@id/favoritesRecyclerView"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintVertical_bias="0.1"
        android:visibility="gone">
        <ImageView
            android:id="@+id/image2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.85"
            android:src="@drawable/no_favorites"
            app:layout_constraintVertical_bias="0"
            android:contentDescription="@string/content_description_no_internet"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/no_favorites"
            android:layout_marginTop="9dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>








</androidx.constraintlayout.widget.ConstraintLayout>